--- a/css/style.css
+++ b/css/style.css
@@ -47,7 +47,7 @@
 }
 
 .heading1 {
-  color: #26547c;
+  color: #1eaad4;
   text-align: center;
   font-family: Play;
   font-weight: 700;
@@ -86,7 +86,7 @@
   font-size: 35px;
   line-height: 40px;
   margin-bottom: 20px;
-  color: #26547c;
+  color: #1eaad4;
 }
 
 .skill-line {
