--- a/css/style.scss
+++ b/css/style.scss
@@ -45,7 +45,7 @@ $font-color:hsla(0, 14%, 3%, 0.937);
   }
 
   .heading1{
-    color: #26547c;
+    color: #1eaad4;
     text-align: center;
     font-family:Play;
     font-weight:700;
@@ -80,7 +80,7 @@ $font-color:hsla(0, 14%, 3%, 0.937);
   font-size: 35px;
   line-height: 40px;
   margin-bottom: 20px;
-  color: #26547c;
+  color: #1eaad4;
 }
 
 .skill-line{
