--- a/css/style.css
+++ b/css/style.css
@@ -46,6 +46,16 @@
   height: 100%;
 }
 
+.navbar-toggler {
+    padding: 0.25rem 0.75rem;
+    font-size: 1.25rem;
+    line-height: 1;
+    background-color:
+    border: 1px solid !important;
+    border-radius: 0.25rem;
+    transition: box-shadow .15s ease-in-out;
+}
+
 .heading1 {
   color: #1eaad4;
   text-align: center;
